@@ -1,3 +1,8 @@
+2007-07-26  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/40749
+	* g++.dg/warn/Wreturn-type-6.C: New test.
+
 2009-07-25  Uros Bizjak  <ubizjak@gmail.com>
 
 	* lib/target-supports.exp (check_effective_target_static): New
