@@ -1,3 +1,9 @@
+2009-07-26  Simon Martin  <simartin@users.sourceforge.net>
+
+	PR c++/40749
+	* decl.c (grokdeclarator): Do not set TREE_NO_WARNING for functions
+	with a qualified return type.
+
 2009-07-24  Jason Merrill  <jason@redhat.com>
 
 	Core issue 702
